Rewrite Dockerfile for latest Android SDK/NDK requirements Fixes docker/android-sdk#1